before slider change

--- a/index.html
+++ b/index.html
@@ -215,12 +215,12 @@
 		<li>
 		  <img src="img/home/home_slide.jpg" class="slide-img" alt="Insert Alt">
 		  <div class="wrapper">
-			<div class="column cta third">
+<!--			<div class="column cta third">
 			  <h1>I love scotch</h1> 
 			  <h3>Scotchy, scotch, scotch. Here it goes down, down into my belly...</h3>
 			  <p>This minimal HTML5 theme is designed for showcasing apps, products or basically anything in a full screen slider.</p> 
 			  <p><a class="btn" target="_blank" href="http://themeforest.net/item/kodax-full-screen-landing-page/3634009?ref=KennyWilliams">Download Now</a></p>
-			</div>
+			</div>-->
 		  </div>
 		</li>
 
@@ -228,15 +228,15 @@
 		<li>
 		  <img src="img/home/home_slide1.jpg" class="slide-img" alt="Insert Alt">
 		  <div class="wrapper">
-			<div class="column cta third">
+<!--			<div class="column cta third">
 			  <h1>I love scotch</h1> 
 			  <h3>Scotchy, scotch, scotch. Here it goes down, down into my belly...</h3>
 			  <p>This minimal HTML5 theme is designed for showcasing apps, products or basically anything in a full screen slider.</p> 
 			  <p><a class="btn" target="_blank" href="http://themeforest.net/item/kodax-full-screen-landing-page/3634009?ref=KennyWilliams">Download Now</a></p>
-			</div>
+			</div>-->
 		  </div>
 		</li>
-
+<!--
 		<li>
 		  <img src="img/home/home_slide2.jpg" class="slide-img" alt="Insert Alt">
 		  <div class="wrapper">
@@ -247,65 +247,65 @@
 			  <p><a class="btn" target="_blank" href="http://themeforest.net/item/kodax-full-screen-landing-page/3634009?ref=KennyWilliams">Download Now</a></p>
 			</div>
 		  </div>
-		</li>
+		</li>-->
 
 		<li>
 		  <img src="img/home/home_slide3.jpg" class="slide-img" alt="Insert Alt">
 		  <div class="wrapper">
-			<div class="column cta third">
+<!--			<div class="column cta third">
 			  <h1>I love scotch</h1> 
 			  <h3>Scotchy, scotch, scotch. Here it goes down, down into my belly...</h3>
 			  <p>This minimal HTML5 theme is designed for showcasing apps, products or basically anything in a full screen slider.</p> 
 			  <p><a class="btn" target="_blank" href="http://themeforest.net/item/kodax-full-screen-landing-page/3634009?ref=KennyWilliams">Download Now</a></p>
-			</div>
+			</div>-->
 		  </div>
 		</li>
 
 		<li>
 		  <img src="img/home/home_slide4.jpg" class="slide-img" alt="Insert Alt">
 		  <div class="wrapper">
-			<div class="column cta third">
+<!--			<div class="column cta third">
 			  <h1>I love scotch</h1> 
 			  <h3>Scotchy, scotch, scotch. Here it goes down, down into my belly...</h3>
 			  <p>This minimal HTML5 theme is designed for showcasing apps, products or basically anything in a full screen slider.</p> 
 			  <p><a class="btn" target="_blank" href="http://themeforest.net/item/kodax-full-screen-landing-page/3634009?ref=KennyWilliams">Download Now</a></p>
-			</div>
+			</div>-->
 		  </div>
 		</li>
 
 		<li>
 		  <img src="img/home/home_slide5.jpg" class="slide-img" alt="Insert Alt">
 		  <div class="wrapper">
-			<div class="column cta third">
+<!--			<div class="column cta third">
 			  <h1>I love scotch</h1> 
 			  <h3>Scotchy, scotch, scotch. Here it goes down, down into my belly...</h3>
 			  <p>This minimal HTML5 theme is designed for showcasing apps, products or basically anything in a full screen slider.</p> 
 			  <p><a class="btn" target="_blank" href="http://themeforest.net/item/kodax-full-screen-landing-page/3634009?ref=KennyWilliams">Download Now</a></p>
-			</div>
+			</div>-->
 		  </div>
 		</li>
 
 		<li>
 		  <img src="img/home/home_slide6.jpg" class="slide-img" alt="Insert Alt">
 		  <div class="wrapper">
-			<div class="column cta third">
+<!--			<div class="column cta third">
 			  <h1>I love scotch</h1> 
 			  <h3>Scotchy, scotch, scotch. Here it goes down, down into my belly...</h3>
 			  <p>This minimal HTML5 theme is designed for showcasing apps, products or basically anything in a full screen slider.</p> 
 			  <p><a class="btn" target="_blank" href="http://themeforest.net/item/kodax-full-screen-landing-page/3634009?ref=KennyWilliams">Download Now</a></p>
-			</div>
+			</div>-->
 		  </div>
 		</li>
 
 		<li>
 		  <img src="img/home/home_slide7.jpg" class="slide-img" alt="Insert Alt">
 		  <div class="wrapper">
-			<div class="column cta third">
+<!--			<div class="column cta third">
 			  <h1>I love scotch</h1> 
 			  <h3>Scotchy, scotch, scotch. Here it goes down, down into my belly...</h3>
 			  <p>This minimal HTML5 theme is designed for showcasing apps, products or basically anything in a full screen slider.</p> 
 			  <p><a class="btn" target="_blank" href="http://themeforest.net/item/kodax-full-screen-landing-page/3634009?ref=KennyWilliams">Download Now</a></p>
-			</div>
+			</div>-->
 		  </div>
 		</li>
 
@@ -446,7 +446,7 @@
   <footer>
 	<div class="main wrapper clearfix foot-widgets">
 	  <!-- Begin Widget -->
-	  <div class="fourths">
+	  <div class="half">
 		<h4>Overview</h4>
 		<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras mattis consectetur purus sit amet fermentum. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec ullamcorper nulla.</p>
 	  </div>
@@ -454,7 +454,7 @@
 
 
 	  <!-- Begin Widget -->
-	  <div class="fourths">
+<!--	  <div class="fourths">
 		<h4>Recent Posts</h4>
 		<ul>
 		  <li><a href="">Condimentum Bibendum Vehicula</a></li>
@@ -462,18 +462,18 @@
 		  <li><a href="">Fermentum Tortor Parturient</a></li>
 		  <li><a href="">Tellus Mollis Nullam Tortor Justo Purus</a></li>
 		</ul>	
-	  </div>
+	  </div>-->
 
 
 	  <!-- Begin Widget -->
-	  <div class="fourths">
+<!--	  <div class="fourths">
 		<h4>Tweets</h4>
 		<p class="tweet">Cras mattis ullam <a href="#">#consectetur purus</a> sit amet ferme ntum. Donec ullam corper nulla non metus auctor frin gilla.</p>	
-	  </div>
+	  </div>-->
 
 
 	  <!-- Begin Widget -->
-	  <div class="fourths last widget">
+	  <div class="half last widget">
 		<h4>Recent Pics</h4>
 		<div class="clearfix">
 		  <div class="mosaic-block fade third">
@@ -530,7 +530,7 @@
 	  </div>	
 
 	  <div class="foot left">
-		<a href="index.html">Kodax</a>© Copyright 2013
+		<a href="index.html">Dörwall</a>© Copyright 2014
 	  </div>	
 	</div>
   </footer>
