After Navigation adjustments and making Layout changes

--- a/Kbe_price.html
+++ b/Kbe_price.html
@@ -36,25 +36,25 @@
                     			<li><a href="home-static.html">Home Page 2</a></li>
                     		</ul>	
                     	</li>
-                        <li class="nav-parent"><a href="about.html">About</a>
+                        <li class="nav-parent"><a href="products.html">About</a>
                         	<ul>
-                        		<li><a href="styles.html">Styles</a></li>
-                        		<li><a href="404.html">404 Page</a></li>
-                        		<li><a href="results.html">Search Results</a></li>
+                        		<li><a href="glassin.html">Styles</a></li>
+                        		<li><a href="visio.html">404 Page</a></li>
+                        		<li><a href="kbe.html">Search Results</a></li>
                         	</ul>	
                         </li>
                         <li class="nav-parent"><a href="gallery.html">Gallery</a>
                         	<ul>
-                        		<li><a href="gallery1.html">Gallery Style 1</a></li>
-                        		<li><a href="gallery2.html">Gallery Style 2</a></li>
-                        		<li><a href="gallery3.html">Gallery Style 3</a></li>
+                        		<li><a href="glassin_gallery.html">Gallery Style 1</a></li>
+                        		<li><a href="visio_gallery.html">Gallery Style 2</a></li>
+                        		<li><a href="kbe_gallery.html">Gallery Style 3</a></li>
                         	</ul>
                         </li>
-                        <li class="nav-parent"><a class="active" href="blog.html">Blog</a>
+                        <li class="nav-parent"><a class="active" href="visio_price.html">Blog</a>
                         	<ul>
-                        		<li><a href="blog-full.html">Full Width</a></li>
-                        		<li><a href="blog.html">Full Width Neat</a></li>
-                        		<li><a href="blog-side.html">With Sidebar</a></li>
+                        		<li><a href="glassin_price.html">Full Width</a></li>
+                        		<li><a href="visio_price.html">Full Width Neat</a></li>
+                        		<li><a href="Kbe_price.html">With Sidebar</a></li>
                         		<li><a href="post.html">Single Post</a></li>
                         	</ul>	
                         </li>
