first Sample to Palle, Patly finished Layout ,Responsive :) :)

--- a/glassin_gallery.html
+++ b/glassin_gallery.html
@@ -9,7 +9,7 @@
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
         <meta content="black" name="apple-mobile-web-app-status-bar-style">
         
-        <title>Kodax</title>
+        <title>Glasin Gallery</title>
         <meta name="description" content="">
 
          <link rel="stylesheet" type="text/css" href="css/normalize.min.css">
@@ -28,7 +28,7 @@
 	
         <div class="header-container">
             <header class="wrapper clearfix">
-            	<a href="index.html" class="logo"></a>
+		<a href="index.html" class="logo"><img src="img/home/Dor_logo.png" alt="Logo" /></a>
                 <nav id="nav-wrap">
                 		<ul class="nav" id="nav">
                     	<li class="nav-parent"><a href="index.html">Home</a></li>
@@ -76,8 +76,8 @@
                 		<div class="clearfix">
                 			<div class="third">
                 				<h2>Gallery Style One</h2>
-                				<p class="lead">Commodo vivamus sagittis lacus vel augue laore sagittis lacus vel augue laoreet rutrum.</p>
-                				<p>Blonec id elilit non mi porta gravida at eget metus. Donec ullamcorper nulla non metus auctor fringilla. Donec id elit non mi porta gravida at eget metus. Vivamus sagittis lacus vel auguus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.
+                				<p class="lead">Highlited words</p>
+                				<p>More text here
                 				</p>
                 				
                 			</div>
