--- a/post.html
+++ b/post.html
@@ -9,7 +9,7 @@
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
         <meta content="black" name="apple-mobile-web-app-status-bar-style">
         
-        <title>Kodax</title>
+        <title>Dprwall Post page</title>
         <meta name="description" content="">
 
          <link rel="stylesheet" type="text/css" href="css/normalize.min.css">
