--- a/visio_gallery.html
+++ b/visio_gallery.html
@@ -9,7 +9,7 @@
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
         <meta content="black" name="apple-mobile-web-app-status-bar-style">
         
-        <title>Kodax</title>
+        <title>Dorwall Visio Gallery Page </title>
         <meta name="description" content="">
 
          <link rel="stylesheet" type="text/css" href="css/normalize.min.css">
@@ -80,14 +80,9 @@
 <!-- Start Meta -->
     	                	   <aside class="left-aside left third">
     	                	      <ul class="meta option-set" id="filter" data-option-key="filter">
-    	                	       	<li><strong>Isotope Gallery</strong></li>
-    	                	       	<li><a href="#show-all" data-option-value="*" class="selected">All Galleries</a></li>
-    	                	       	<li><a href="#cat4" data-option-value=".cat1">Apple Ipads</a></li>
-    	                	       	<li><a href="#features" data-option-value=".cat2">Laptops and Monitors</a></li>
-    	                	       	<li><a href="#cat2" data-option-value=".cat3">Hand Held Devices</a></li>
-    	                	       	<li><a href="#cat3" data-option-value=".cat4">Category Four</a></li>
+    	                	       	<li><strong>Visio Gallery</strong></li>
     	                	      </ul>
-    	                	      <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec id elit non mi porta gravida at eget metus. Donec ullamcorper nulla non metus auctor fringilla. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>	
+    	                	      <p>Vsio words </p>	
     	                	   </aside>
     	                	   
     	                	    <!-- Start Isotope -->
