--- a/index.html
+++ b/index.html
@@ -6,65 +6,65 @@
   <meta content="black" name="apple-mobile-web-app-status-bar-style">
   <title>Dorrwahl Websida</title>
   <meta name="description" content="">
-  <link rel="stylesheet" type="text/css" href="css/normalize.min.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/flexslider.css">
-  <link rel="stylesheet" type="text/css" href="css/superslides.css">
-  <link rel="stylesheet" type="text/css" href="js/fancybox/jquery.fancybox.css?v=2.1.4" media="screen" />
-  <link href="css.css" rel="stylesheet" type="text/css"/>
-  <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../css/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="../css/main.css">
+  <link rel="stylesheet" type="text/css" href="../css/flexslider.css">
+  <link rel="stylesheet" type="text/css" href="../css/superslides.css">
+  <link rel="stylesheet" type="text/css" href="../js/fancybox/jquery.fancybox.css?v=2.1.4" media="screen" />
+  <link href="../css.css" rel="stylesheet" type="text/css"/>
+  <script src="../js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,300,500,600,200,700,800,900' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.js"></script>
-  <script type="text/javascript" src="js/jquery.flexisel.js"></script>
+  <script type="text/javascript" src="../js/jquery.flexisel.js"></script>
 </head>
 <body class="home">
   <div class="header-container" id="slides">
 	<header>
 	  <div class="wrapper clearfix">
-		<a href="index.html" class="logo"><img src="img/home/Dor_logo.png" alt="Logo" /></a>
+		<a href="../index.html" class="logo"><img src="../img/home/Dor_logo.png" alt="Logo" /></a>
 		<nav id="nav-wrap">
 		  <ul class="nav" id="nav">
-			<li class="nav-parent"><a class="active" href="index.html">Home</a></li>
+			<li class="nav-parent"><a class="active" href="../index.html">Home</a></li>
 			
-			<li class="nav-parent"><a href="products.html">Products</a>
+			<li class="nav-parent"><a href="../pages/products.html">Products</a>
 			  <ul>
-				<li><a href="glassin.html">Glasin</a></li>
-				<li><a href="visio.html">Visio</a></li>
-				<li><a href="kbe.html">KbE</a></li>
+				<li><a href="../pages/glassin.html">Glasin</a></li>
+				<li><a href="../pages/visio.html">Visio</a></li>
+				<li><a href="../pages/kbe.html">KbE</a></li>
 			  </ul>	
 			</li>
-			<li class="nav-parent"><a href="gallery.html">Gallery</a>
+			<li class="nav-parent"><a href="../gallery.html">Gallery</a>
 			  <ul>
-				<li><a href="glassin_gallery.html">Glasin</a></li>
-				<li><a href="visio_gallery.html">Visio</a></li>
-				<li><a href="kbe_gallery.html">Kbe</a></li>
+				<li><a href="../pages/glassin_gallery.html">Glasin</a></li>
+				<li><a href="../pages/visio_gallery.html">Visio</a></li>
+				<li><a href="../pages/kbe_gallery.html">Kbe</a></li>
 			  </ul>
 			</li>
-			<li class="nav-parent"><a href="pricer.html">Priser</a>
+			<li class="nav-parent"><a href="../pricer.html">Priser</a>
 			  <ul>
-				<li><a href="glassin_price.html">Glasin</a></li>
-				<li><a href="visio_price.html">Visio</a></li>
-				<li><a href="kbe_price.html">Kbe</a></li>
+				<li><a href="../pages/glassin_price.html">Glasin</a></li>
+				<li><a href="../pages/visio_price.html">Visio</a></li>
+				<li><a href="../pages/kbe_price.html">Kbe</a></li>
 			  </ul>	
 			</li>
-			<li class="last"><a href="contact.html">Contact</a></li>
+			<li class="last"><a href="../pages/contact.html">Contact</a></li>
 		  </ul>                	
 		</nav>
 	  </div>
 	</header>
 	<!-- START SLIDES -->
 	<ul class="slides-container">
-	  <li><img src="img/home/home_slide.jpg" class="slide-img" alt="Insert Alt"></li>
-	  <li><img src="img/home/home_slide1.jpg" class="slide-img" alt="Insert Alt">	</li>
-	  <li><img src="img/home/home_slide3.jpg" class="slide-img" alt="Insert Alt">	</li>
-	  <li><img src="img/home/home_slide4.jpg" class="slide-img" alt="Insert Alt"></li>
-	  <li><img src="img/home/home_slide5.jpg" class="slide-img" alt="Insert Alt"></li>
-	  <li><img src="img/home/home_slide6.jpg" class="slide-img" alt="Insert Alt"></li>
-	  <li><img src="img/home/home_slide7.jpg" class="slide-img" alt="Insert Alt"></li>
+	  <li><img src="../img/home/home_slide.jpg" class="slide-img" alt="Insert Alt"></li>
+	  <li><img src="../img/home/home_slide1.jpg" class="slide-img" alt="Insert Alt">	</li>
+	  <li><img src="../img/home/home_slide3.jpg" class="slide-img" alt="Insert Alt">	</li>
+	  <li><img src="../img/home/home_slide4.jpg" class="slide-img" alt="Insert Alt"></li>
+	  <li><img src="../img/home/home_slide5.jpg" class="slide-img" alt="Insert Alt"></li>
+	  <li><img src="../img/home/home_slide6.jpg" class="slide-img" alt="Insert Alt"></li>
+	  <li><img src="../img/home/home_slide7.jpg" class="slide-img" alt="Insert Alt"></li>
 	</ul>
 	<nav class="slides-navigation">
-	  <a href="#" class="next">s</a>
-	  <a href="#" class="prev">S</a>
+	  <a href="../#" class="next">s</a>
+	  <a href="../#" class="prev">S</a>
 	</nav>
   </div>
 </div>
@@ -81,10 +81,10 @@
 		<hr/>
 		<div class="brand-carsuals">
 		  <ul id="flexiselDemo3">
-			<li><img src="img/home/viso_logo1.png" /></li>
-			<li><img src="img/b-logo.png" /></li>
-			<li><img src="img/b-logo.png" /></li>
-			<li><img src="img/b-logo.png" /></li>                                                 
+			<li><img src="../img/home/viso_logo1.png" /></li>
+			<li><img src="../img/b-logo.png" /></li>
+			<li><img src="../img/b-logo.png" /></li>
+			<li><img src="../img/b-logo.png" /></li>                                                 
 		  </ul>  
 		<script type="text/javascript">
 			$(window).load(function() { $("#flexiselDemo3").flexisel({visibleItems: 5,animationSpeed: 1000,autoPlay: true,autoPlaySpeed: 3000,pauseOnHover: true,	enableResponsiveBreakpoints: true,responsiveBreakpoints: { portrait: {changePoint: 480,visibleItems: 1 }, landscape: {changePoint: 640,visibleItems: 2 }, tablet: {changePoint: 768,visibleItems: 3 }}});});
@@ -115,33 +115,33 @@
 	  <h4>Recent Pics</h4>
 	  <div class="clearfix">
 		<div class="mosaic-block fade third">
-		  <a href="img/mock4.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
-		  <div class="mosaic-backdrop"><img src="img/mock4.jpg" alt="Mock" /></div>
+		  <a href="../img/mock4.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
+		  <div class="mosaic-backdrop"><img src="../img/mock4.jpg" alt="Mock" /></div>
 		</div>
 
 		<div class="mosaic-block fade third">
-		  <a href="img/mock7.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
-		  <div class="mosaic-backdrop"><img src="img/mock7.jpg" alt="Mock" /></div>
+		  <a href="../img/mock7.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
+		  <div class="mosaic-backdrop"><img src="../img/mock7.jpg" alt="Mock" /></div>
 		</div>
 
 		<div class="mosaic-block fade third last">
-		  <a href="img/mock4.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
-		  <div class="mosaic-backdrop"><img src="img/mock.jpg" alt="Mock" /></div>
+		  <a href="../img/mock4.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
+		  <div class="mosaic-backdrop"><img src="../img/mock.jpg" alt="Mock" /></div>
 		</div>
 
 		<div class="mosaic-block fade third">
-		  <a href="img/mock4.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
-		  <div class="mosaic-backdrop"><img src="img/mock2.jpg" alt="Mock" /></div>
+		  <a href="../img/mock4.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
+		  <div class="mosaic-backdrop"><img src="../img/mock2.jpg" alt="Mock" /></div>
 		</div>
 
 		<div class="mosaic-block fade third">
-		  <a href="img/mock5.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
-		  <div class="mosaic-backdrop"><img src="img/mock5.jpg" alt="Mock" /></div>
+		  <a href="../img/mock5.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
+		  <div class="mosaic-backdrop"><img src="../img/mock5.jpg" alt="Mock" /></div>
 		</div>
 
 		<div class="mosaic-block fade third last">
-		  <a href="img/mock4.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
-		  <div class="mosaic-backdrop"><img src="img/mock6.jpg" alt="Mock" /></div>
+		  <a href="../img/mock4.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
+		  <div class="mosaic-backdrop"><img src="../img/mock6.jpg" alt="Mock" /></div>
 		</div>
 	  </div>
 	</div>
@@ -149,34 +149,34 @@
   <div class="main wrapper clearfix">
 	<div class="foot right">
 	  <ul class="social-link">
-		<li><a href="#">d</a></li>
-		<li><a href="#">e</a></li>
-		<li><a href="#">f</a></li>
-		<li><a href="#">h</a></li>
-		<li><a href="#">1</a></li>
-		<li><a href="#">i</a></li>
-		<li><a href="#">r</a></li>
-		<li><a href="#">t</a></li>
+		<li><a href="../#">d</a></li>
+		<li><a href="../#">e</a></li>
+		<li><a href="../#">f</a></li>
+		<li><a href="../#">h</a></li>
+		<li><a href="../#">1</a></li>
+		<li><a href="../#">i</a></li>
+		<li><a href="../#">r</a></li>
+		<li><a href="../#">t</a></li>
 	  </ul>
 	</div>	
 	<div class="foot left">
-	  <a href="index.html">Dörwall</a>© Copyright 2014
+	  <a href="../index.html">Dörwall</a>© Copyright 2014
 	</div>	
   </div>
 </footer>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
-<script type="text/javascript" src="js/fitvids.min.js"></script>
-<script type="text/javascript" src="js/jquery.widowFix-1.3.2.min.js"></script> 
-<script type="text/javascript" src="js/fancybox/jquery.fancybox.js?v=2.1.4"></script>
-<script type="text/javascript" src="js/backstretch.js"></script>
-<script type="text/javascript" src="js/placeholder.js"></script>
-<script type="text/javascript" src="js/mosaic.1.0.1.min.js"></script>
-<script type="text/javascript" src="js/jquery.flexslider-min.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/jquery.superslides.js"></script>
-<script src="js/hammer.js"></script>
-<script src="js/jquery.specialevent.hammer.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script>window.jQuery || document.write('<script src="../js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
+<script type="text/javascript" src="../js/fitvids.min.js"></script>
+<script type="text/javascript" src="../js/jquery.widowFix-1.3.2.min.js"></script> 
+<script type="text/javascript" src="../js/fancybox/jquery.fancybox.js?v=2.1.4"></script>
+<script type="text/javascript" src="../js/backstretch.js"></script>
+<script type="text/javascript" src="../js/placeholder.js"></script>
+<script type="text/javascript" src="../js/mosaic.1.0.1.min.js"></script>
+<script type="text/javascript" src="../js/jquery.flexslider-min.js"></script>
+<script src="../js/jquery.easing.1.3.js"></script>
+<script src="../js/jquery.superslides.js"></script>
+<script src="../js/hammer.js"></script>
+<script src="../js/jquery.specialevent.hammer.js"></script>
+<script type="text/javascript" src="../js/main.js"></script>
 <script>
   var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview']];
   (function(d, t) {
