Pricing added, fixed navigation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="../js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,300,500,600,200,700,800,900' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.js"></script>
-  <script type="text/javascript" src="../js/jquery.flexisel.js"></script>
+<!--  <script type="text/javascript" src="../js/jquery.flexisel.js"></script>-->
 </head>
 <body class="home">
   <div class="header-container" id="slides">
@@ -33,14 +33,14 @@
 				<li><a href="../pages/kbe.html">KbE</a></li>
 			  </ul>	
 			</li>
-			<li class="nav-parent"><a href="../gallery.html">Gallery</a>
+			<li class="nav-parent"><a href="../pages/gallery.html">Gallery</a>
 			  <ul>
 				<li><a href="../pages/glassin_gallery.html">Glasin</a></li>
 				<li><a href="../pages/visio_gallery.html">Visio</a></li>
 				<li><a href="../pages/kbe_gallery.html">Kbe</a></li>
 			  </ul>
 			</li>
-			<li class="nav-parent"><a href="../pricer.html">Priser</a>
+			<li class="nav-parent"><a href="../pages/pricer.html">Priser</a>
 			  <ul>
 				<li><a href="../pages/glassin_price.html">Glasin</a></li>
 				<li><a href="../pages/visio_price.html">Visio</a></li>
@@ -54,9 +54,9 @@
 	</header>
 	<!-- START SLIDES -->
 	<ul class="slides-container">
+  	  <li><img src="../img/home/home_slide3.jpg" class="slide-img" alt="Insert Alt">	</li>
 	  <li><img src="../img/home/home_slide.jpg" class="slide-img" alt="Insert Alt"></li>
 	  <li><img src="../img/home/home_slide1.jpg" class="slide-img" alt="Insert Alt">	</li>
-	  <li><img src="../img/home/home_slide3.jpg" class="slide-img" alt="Insert Alt">	</li>
 	  <li><img src="../img/home/home_slide4.jpg" class="slide-img" alt="Insert Alt"></li>
 	  <li><img src="../img/home/home_slide5.jpg" class="slide-img" alt="Insert Alt"></li>
 	  <li><img src="../img/home/home_slide6.jpg" class="slide-img" alt="Insert Alt"></li>
