fixed Css, Hover activation, Sliders, PHP mailer----2

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,7 +23,7 @@
 		<nav id="nav-wrap">
 		  <ul class="nav" id="nav">
 			<li class="nav-parent"><a href="../index.html">Home</a></li>
-			<li class="nav-parent"><a href="../pages/products.html">Products</a>
+			<li class="nav-parent"><a class="active" href="../pages/products.html">Products</a>
 			  <ul>
 				<li><a href="../pages/glassin.html">Glasin</a></li>
 				<li><a href="../pages/visio.html">Visio</a></li>
@@ -44,7 +44,7 @@
 				<li><a href="../pages/kbe_price.html">Kbe</a></li>
 			  </ul>	
 			</li>
-			<li class="last"><a class="active" href="../pages/contact.html">Contact</a></li>
+			<li class="last"><a href="../pages/contact.html">Contact</a></li>
 		  </ul>                	
 		</nav>
 	  </header>
