--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html> 
 <html class="no-js"> 
   <head>
@@ -21,14 +20,14 @@
 		<nav id="nav-wrap">
 		  <ul class="nav" id="nav">
 			<li class="nav-parent"><a href="../index.html">Home</a></li>
-			<li class="nav-parent"><a  href="../pages/products.html">Products</a>
+			<li class="nav-parent"><a class="active" href="../pages/products.html">Products</a>
 			  <ul>
 				<li><a href="../pages/glassin.html">Glasin</a></li>
 				<li><a href="../pages/visio.html">Visio</a></li>
 				<li><a href="../pages/kbe.html">Kbe</a></li>
 			  </ul>	
 			</li>
-			<li class="nav-parent"><a class="active" href="../pages/gallery.html">Gallery</a>
+			<li class="nav-parent"><a href="../pages/gallery.html">Gallery</a>
 			  <ul>
 				<li><a href="../pages/glassin_gallery.html">Glassin</a></li>
 				<li><a href="../pages/visio_gallery.html">Visio</a></li>
@@ -132,11 +131,11 @@
 			  </div>
 			  <div class="mosaic-block fade sixth last">
 				<a href="../img/glasin/19.jpg" class="mosaic-overlay fancybox" data-fancybox-group="glasin" title="Insert Your Title"></a>
-				<div class="mosaic-backdrop"><img src="../img/glasin/19.jpg" alt="Mock" /></div>
+				<div class="mosaic-backdrop"><img src="../img/glasin/19.JPG" alt="Mock" /></div>
 			  </div>
 			  <div class="mosaic-block fade sixth last">
 				<a href="../img/glasin/20.jpg" class="mosaic-overlay fancybox" data-fancybox-group="glasin" title="Insert Your Title"></a>
-				<div class="mosaic-backdrop"><img src="../img/glasin/20.jpg" alt="Mock" /></div>
+				<div class="mosaic-backdrop"><img src="../img/glasin/20.JPG" alt="Mock" /></div>
 			  </div>
 			  <!--			</div>-->
 			</div>
