--- a/pages/glassin.html
+++ b/pages/glassin.html
@@ -94,8 +94,8 @@
 					<li><img src="../img/glasin/16.jpg" alt="Mock" /></li>
 					<li><img src="../img/glasin/17.jpg" alt="Mock" /></li>
 					<li><img src="../img/glasin/18.jpg" alt="Mock" /></li>
-					<li><img src="../img/glasin/19.jpg" alt="Mock" /></li>
-					<li><img src="../img/glasin/20.jpg" alt="Mock" /></li>
+					<li><img src="../img/glasin/19.JPG" alt="Mock" /></li>
+					<li><img src="../img/glasin/20.JPG" alt="Mock" /></li>
 				  </ul>
 				</div>
 			  </div>
