--- a/pages/glassin_gallery.html
+++ b/pages/glassin_gallery.html
@@ -143,12 +143,12 @@
 			  <div class="mosaic-backdrop"><img src="../img/glasin/18.jpg" alt="Mock" /></div>
 			</div>
 			<div class="mosaic-block fade sixth last">
-			  <a href="../img/glasin/19.jpg" class="mosaic-overlay fancybox" data-fancybox-group="glasin" title="Insert Your Title"></a>
-			  <div class="mosaic-backdrop"><img src="../img/glasin/19.jpg" alt="Mock" /></div>
+			  <a href="../img/glasin/19.JPG" class="mosaic-overlay fancybox" data-fancybox-group="glasin" title="Insert Your Title"></a>
+			  <div class="mosaic-backdrop"><img src="../img/glasin/19.JPG" alt="Mock" /></div>
 			</div>
 			<div class="mosaic-block fade sixth last">
-			  <a href="../img/glasin/20.jpg" class="mosaic-overlay fancybox" data-fancybox-group="glasin" title="Insert Your Title"></a>
-			  <div class="mosaic-backdrop"><img src="../img/glasin/20.jpg" alt="Mock" /></div>
+			  <a href="../img/glasin/20.JPG" class="mosaic-overlay fancybox" data-fancybox-group="glasin" title="Insert Your Title"></a>
+			  <div class="mosaic-backdrop"><img src="../img/glasin/20.JPG" alt="Mock" /></div>
 			</div>
 
 
