--- a/pages/pricer.html
+++ b/pages/pricer.html
@@ -19,7 +19,7 @@
 		<nav id="nav-wrap">
 		  <ul class="nav" id="nav">
 			<li class="nav-parent"><a href="../index.html">Home</a></li>
-			<li class="nav-parent"><a href="../pages/products.html">Products</a>
+			<li class="nav-parent"><a class="active" href="../pages/products.html">Products</a>
 			  <ul>
 				<li><a href="../pages/glassin.html">Glasin</a></li>
 				<li><a href="../pages/visio.html">Visio</a></li>
@@ -33,7 +33,7 @@
 				<li><a href="../pages/kbe_gallery.html">KbE</a></li>
 			  </ul>
 			</li>
-			<li class="nav-parent"><a class="active" href="../pages/pricer.html">Priser</a>
+			<li class="nav-parent"><a href="../pages/pricer.html">Priser</a>
 			  <ul>
 				<!--				<li><a href="../pages/glassin_price.html">Glasin</a></li>-->
 				<li><a href="../pages/visio_price.html">Visio</a></li>
