--- a/pages/contact.html
+++ b/pages/contact.html
@@ -184,7 +184,7 @@
 	<script type="text/javascript" src="../js/fitvids.min.js"></script>
 	<script type="text/javascript" src="../js/jquery.widowFix-1.3.2.min.js"></script> 
 	<script type="text/javascript" src="../js/fancybox/jquery.fancybox.js?v=2.1.4"></script>
-	<script type="text/javascript" src="../js/backstretch.js"></script>
+	<script type="text/javascript" src="../js/backstretch.min.js"></script>
 	<script type="text/javascript" src="../js/placeholder.js"></script>
 	<script type="text/javascript" src="../js/mosaic.1.0.1.min.js"></script>
 	<script type="text/javascript" src="../js/jquery.flexslider-min.js"></script>
