--- a/pages/pricer.html
+++ b/pages/pricer.html
@@ -173,48 +173,6 @@
 	  </div>
 	</div>
 	<footer>
-	  <!--	  <div class="main wrapper clearfix foot-widgets">
-			  <div class="half">
-				<h4>Overview</h4>
-				<p>
-				  If you have any more comments , YOu can put them here, 
-				</p>
-			  </div>
-			  <div class="half last widget">
-				<h4>Recent Pics</h4>
-				<div class="clearfix">
-				  <div class="mosaic-block fade third">
-					<a href="../img/mock4.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
-					<div class="mosaic-backdrop"><img src="../../img/mock4.jpg" alt="Mock" /></div>
-				  </div>
-	  
-				  <div class="mosaic-block fade third">
-					<a href="../img/mock7.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
-					<div class="mosaic-backdrop"><img src="../img/mock7.jpg" alt="Mock" /></div>
-				  </div>
-	  
-				  <div class="mosaic-block fade third last">
-					<a href="../img/mock4.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
-					<div class="mosaic-backdrop"><img src="../img/mock.jpg" alt="Mock" /></div>
-				  </div>
-	  
-				  <div class="mosaic-block fade third">
-					<a href="../../img/mock4.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
-					<div class="mosaic-backdrop"><img src="../img/mock2.jpg" alt="Mock" /></div>
-				  </div>
-	  
-				  <div class="mosaic-block fade third">
-					<a href="../img/mock5.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
-					<div class="mosaic-backdrop"><img src="../img/mock5.jpg" alt="Mock" /></div>
-				  </div>
-	  
-				  <div class="mosaic-block fade third last">
-					<a href="../img/mock4.jpg" class="mosaic-overlay fancybox" data-fancybox-group="gallery" title="Insert Your Title"></a>
-					<div class="mosaic-backdrop"><img src="../img/mock6.jpg" alt="Mock" /></div>
-				  </div>
-				</div>
-			  </div>
-			</div>-->
 	  <div class="main wrapper clearfix">
 		<div class="foot right">
 		  <ul class="social-link">
@@ -236,10 +194,9 @@
 	<!-- Start Scripts -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="../js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
-	<script type="text/javascript" src="../js/fitvids.min.js"></script>
 	<script type="text/javascript" src="../js/jquery.widowFix-1.3.2.min.js"></script> 
 	<script type="text/javascript" src="../js/fancybox/jquery.fancybox.js?v=2.1.4"></script>
-	<script type="text/javascript" src="../js/backstretch.js"></script>
+	<script type="text/javascript" src="../js/backstretch.min.js"></script>
 	<script type="text/javascript" src="../js/placeholder.js"></script>
 	<script type="text/javascript" src="../js/mosaic.1.0.1.min.js"></script>
 	<script type="text/javascript" src="../js/jquery.flexslider-min.js"></script>
